--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=shortline.proxy.rlwy.net;Port=23989;Database=railway;User=root;Password=YBSHmEEXXWGkFGXNtsZmmEgEqTpcxjuz;"
+  }
 }
