--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=shortline.proxy.rlwy.net;Port=23989;Database=railway;User=root;Password=YBSHmEEXXWGkFGXNtsZmmEgEqTpcxjuz;"
+    "DefaultConnection": "Server=shortline.proxy.rlwy.net;Port=23989;Database=railway;User=root;Password=YBSHmEEXXWGkFGXNtsZmmEgEqTpcxjuz;SslMode=None;"
   }
 }
