--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=shortline.proxy.rlwy.net;Port=23989;Database=railway;User=root;Password=YBSHmEEXXWGkFGXNtsZmmEgEqTpcxjuz;SslMode=None;"
+  },
+  "JwtSettings": {
+    "Key": "EstaEsUnaClaveSecretaSegura123456",
+    "Issuer": "MiMangaBotAPI",
+    "Audience": "MiMangaBotClientes",
+    "ExpireMinutes": 10
   }
 }
